[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/RichTextEffects/MatrixEffect.gd" type="Script" id=1]
[ext_resource path="res://scenes/TitleBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Kufam-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/icon.png" type="Texture" id=4]
[ext_resource path="res://assets/folder-open.png" type="Texture" id=5]
[ext_resource path="res://src/App.gd" type="Script" id=6]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=7]
[ext_resource path="res://assets/edit.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/Kufam-Italic-VariableFont_wght.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scenes/JsonEditor/JsonEditor.tscn" type="PackedScene" id=10]

[sub_resource type="RichTextEffect" id=1]
resource_name = "RichTextMatrix"
script = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 13
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
working_dir = "/Users/i13az81/Develop/UNI/MirrorRobot/.gdignore/example_data"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a Directory"
dialog_text = "Choose the directory of your config files!"
mode = 2
access = 2
show_hidden_files = true
current_dir = "/Users/i13az81/Develop/UNI/MirrorRobot"
current_path = "/Users/i13az81/Develop/UNI/MirrorRobot/"

[node name="MirrorErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -91.0
margin_right = 175.0
margin_bottom = 91.0
window_title = "Errors"
resizable = true

[node name="LineEdit" type="RichTextLabel" parent="MirrorErrorDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 342.0
margin_bottom = 138.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[color=grey][matrix]Error[/matrix]"
text = "Error"
selection_enabled = true
custom_effects = [ SubResource( 1 ) ]
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AboutDialog" type="AcceptDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 50.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="AboutDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 452.0
margin_bottom = 186.0
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]Godot Mirror[/b]

A program to Mirror Files and Dictionaries on the Windows platform. Made with the [url=https://godotengine.org]Godot Engine[/url] 3.1
This program was created by [url=https://github.com/SirMoM]Sir.MoM[/url].
Visit the [url=https://github.com/SirMoM/Godot-Mirror]repository[/url] to file bug reports or contribute!

[b] Warning [/b]

The stability of this Programm is not guaranteed. Use them at your own risk.

[b] Notice [/b]

This program was created based on the Programm of [url=https://www.patreon.com/coppolaemilio]Emilio Coppola[/url] and [url=https://github.com/coppolaemilio/godot-nightly/graphs/contributors]contributors[/url] for one [url=https://www.youtube.com/watch?v=WaUaNiq-5DY]of his videos[/url]. Visit his [url=https://github.com/coppolaemilio/godot-nightly]repository[/url]!

This Programm uses a modified version of the [url=https://github.com/KOBUGE-Games/godot-logger/blob/master/logger.gd]logger.gd[/url] script from
[url=https://github.com/KOBUGE-Games]KOBUGE Games[/url] visit the [url=https://github.com/KOBUGE-Games/godot-logger]repository[/url]

Edit Icon created by [url=https://www.flaticon.com/de/autoren/kiranshastry]Kiranshastry[/url]"
text = "Godot Mirror

A program to Mirror Files and Dictionaries on the Windows platform. Made with the Godot Engine 3.1
This program was created by Sir.MoM.
Visit the repository to file bug reports or contribute!

 Warning 

The stability of this Programm is not guaranteed. Use them at your own risk.

 Notice 

This program was created based on the Programm of Emilio Coppola and contributors for one of his videos. Visit his repository!

This Programm uses a modified version of the logger.gd script from
KOBUGE Games visit the repository

Edit Icon created by Kiranshastry"

[node name="FileNameConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 35.0
margin_right = -10.0
margin_bottom = -5.0

[node name="LineEdit" type="LineEdit" parent="FileNameConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 216.0
placeholder_text = "FileName"
caret_blink = true

[node name="Background" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 300.0
mouse_filter = 2
color = Color( 0.0862745, 0.105882, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TitleBar" parent="." instance=ExtResource( 2 )]
anchor_bottom = 0.0

[node name="MainUI" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="MainUI"]
position = Vector2( 58, 67 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI"]
anchor_left = 0.21
anchor_top = 0.136667
anchor_right = 0.59
anchor_bottom = 0.326667
margin_left = 96.6
margin_top = 35.5334
margin_right = 271.4
margin_bottom = 92.9334
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainUI/VBoxContainer"]
margin_right = 190.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
text = "Godot-Mirror"
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="MainUI/VBoxContainer"]
margin_top = 43.0
margin_right = 190.0
margin_bottom = 65.0
text = " v0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="MainUI"]
self_modulate = Color( 1, 1, 1, 0.415686 )
margin_left = 416.737
margin_top = 40.4304
margin_right = 475.737
margin_bottom = 68.4304
custom_fonts/font = SubResource( 5 )
text = "About"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Warning" type="RichTextLabel" parent="MainUI"]
anchor_left = 0.584
anchor_top = 0.226667
anchor_right = 0.952
anchor_bottom = 0.853333
margin_left = 285.0
margin_top = 69.0
margin_right = 478.0
margin_bottom = 261.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "The stability of this tool is not guaranteed. Use them at your own risk.

[center]! You may lose files ![/center]

This tool workes only under windows and mac since it uses plattform specific commands."
text = "The stability of this tool is not guaranteed. Use them at your own risk.

! You may lose files !

This tool workes only under windows and mac since it uses plattform specific commands."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI"]
margin_left = 20.0
margin_top = 150.0
margin_right = 285.0
margin_bottom = 180.0
rect_min_size = Vector2( 260, 30 )
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ConfigFileSelector" type="OptionButton" parent="MainUI/HBoxContainer"]
margin_right = 205.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "No json files!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFolderButton" type="Button" parent="MainUI/HBoxContainer"]
margin_left = 205.0
margin_right = 235.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="EditSelectedFileButton" type="Button" parent="MainUI/HBoxContainer"]
margin_left = 235.0
margin_right = 265.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="MirrorButton" type="Button" parent="MainUI"]
anchor_left = -0.000879028
anchor_top = -0.00163879
anchor_right = -0.000879028
anchor_bottom = -0.00163879
margin_left = 20.0351
margin_top = 190.066
margin_right = 280.036
margin_bottom = 240.066
text = "Mirror"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="MainUI"]
margin_left = 20.0
margin_top = 260.0
margin_right = 482.0
margin_bottom = 284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JsonEditor" parent="." instance=ExtResource( 10 )]
visible = false
anchor_top = 0.113333
anchor_bottom = 0.946667
margin_right = -3.05176e-05
margin_bottom = 0.0
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="meta_clicked" from="MirrorErrorDialog/LineEdit" to="." method="_on_error_meta_clicked"]
[connection signal="meta_clicked" from="AboutDialog/Label2" to="." method="_on_about_meta_clicked"]
[connection signal="confirmed" from="FileNameConfirmationDialog" to="." method="_on_FileNameConfirmationDialog_confirmed"]
[connection signal="pressed" from="MainUI/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="MainUI/HBoxContainer/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
[connection signal="gui_input" from="MainUI/HBoxContainer/EditSelectedFileButton" to="." method="_on_EditSelectedFileButton_gui_input"]
[connection signal="pressed" from="MainUI/HBoxContainer/EditSelectedFileButton" to="." method="_toggle_main_and_edit_view"]
[connection signal="pressed" from="MainUI/MirrorButton" to="." method="_on_MirrorButton_pressed"]
[connection signal="change_view" from="JsonEditor" to="." method="_toggle_main_and_edit_view"]
